--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   <body>
     <blockquote data-width="500" data-height="375" class="ricoh-theta-spherical-image" >Post from RICOH THETA. - <a href="https://theta360.com/s/mgFDoReb9Bvl2ILXKh0K49Urw" target="_blank">Spherical Image - RICOH THETA</a></blockquote>
 <script async src="https://theta360.com/widgets.js" charset="utf-8"></script>
+    <blockquote data-width=100% data-height="375" class="ricoh-theta-spherical-image" >Post from RICOH THETA. - <a href="https://theta360.com/s/mgFDoReb9Bvl2ILXKh0K49Urw" target="_blank">Spherical Image - RICOH THETA</a></blockquote>
+<script async src="https://theta360.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
