--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <div style="padding:50% 0 0 0;position:relative;"><iframe src="https://store.hacosco.com/movies/a193a818-d621-4fb3-b4a2-a0d65b1b4e43/content?token=34929d5f978ca6172338e0e7f51ffec9" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allowfullscreen allowvr></iframe></div>
+    <a href="index.html">ホーム</a>
+    <ul>
+      
+      <li><a href="hiyari-box.html">ヒヤリハット</a></li>
+      <!--
+      <li><a href="vr_inzai_no5-136r.html">No.5立坑　136R</a></li>
+      -->
+      <li><a href="vr_inzai_no5-0100m.html">No.5立坑　113R</a></li>
+      <li><a href="vr_inzai_no5-0200m.html">No.5立坑　187R</a></li>
+      <li><a href="vr_inzai_no5-0300m.html">No.5立坑　261R</a></li>
+      <li><a href="vr_inzai_no5-0400m.html">No.5立坑　335R</a></li>
+      <li><a href="vr_inzai_no5-0500m.html">No.5立坑　409R</a></li>
+      <li><a href="vr_inzai_no5-0600m.html">No.5立坑　483R</a></li>
+      <li><a href="vr_inzai_no5-0700m.html">No.5立坑　557R</a></li>
+      <li><a href="vr_inzai_no5-0800m.html">No.5立坑　631R</a></li>
+      <li><a href="vr_inzai_no5-0900m.html">No.5立坑　705R</a></li>
+      <li><a href="vr_inzai_no5-1000m.html">No.5立坑　779R</a></li>
+      <li><a href="vr_inzai_no5-1100m.html">No.5立坑　853R</a></li>
+      <li><a href="vr_inzai_no5-1200m.html">No.5立坑　950R</a></li>
+
+    </ul>
   </body>
 </html>
