--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!--
       <li><a href="vr_inzai_no5-136r.html">No.5立坑　136R</a></li>
       -->
-      <li><a href="inzai_no5_0100m.html">No.5立坑　113R</a></li>
+      <li><a href="https://doboc.github.io/inzai360/index/inzai_no5_0100m.html">No.5立坑　113R</a></li>
       <li><a href="vr_inzai_no5-0200m.html">No.5立坑　187R</a></li>
       <li><a href="vr_inzai_no5-0300m.html">No.5立坑　261R</a></li>
       <li><a href="vr_inzai_no5-0400m.html">No.5立坑　335R</a></li>
