--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
       <!--
       <li><a href="vr_inzai_no5-136r.html">No.5立坑　136R</a></li>
       -->
-      <li><a href="./inzai_no5_0100m.html">No.5立坑　113R</a></li>
-      <li><a href="vr_inzai_no5-0200m.html">No.5立坑　187R</a></li>
-      <li><a href="vr_inzai_no5-0300m.html">No.5立坑　261R</a></li>
-      <li><a href="vr_inzai_no5-0400m.html">No.5立坑　335R</a></li>
-      <li><a href="vr_inzai_no5-0500m.html">No.5立坑　409R</a></li>
-      <li><a href="vr_inzai_no5-0600m.html">No.5立坑　483R</a></li>
-      <li><a href="vr_inzai_no5-0700m.html">No.5立坑　557R</a></li>
-      <li><a href="vr_inzai_no5-0800m.html">No.5立坑　631R</a></li>
-      <li><a href="vr_inzai_no5-0900m.html">No.5立坑　705R</a></li>
-      <li><a href="vr_inzai_no5-1000m.html">No.5立坑　779R</a></li>
-      <li><a href="vr_inzai_no5-1100m.html">No.5立坑　853R</a></li>
-      <li><a href="vr_inzai_no5-1200m.html">No.5立坑　950R</a></li>
+      <li><a href="./vr_inzai_no5_0100m.html">No.5立坑　113R</a></li>
+      <li><a href="./vr_inzai_no5_0200m.html">No.5立坑　187R</a></li>
+      <li><a href="./vr_inzai_no5_0300m.html">No.5立坑　261R</a></li>
+      <li><a href="./vr_inzai_no5_0400m.html">No.5立坑　335R</a></li>
+      <li><a href="./vr_inzai_no5_0500m.html">No.5立坑　409R</a></li>
+      <li><a href="./vr_inzai_no5_0600m.html">No.5立坑　483R</a></li>
+      <li><a href="./vr_inzai_no5_0700m.html">No.5立坑　557R</a></li>
+      <li><a href="./vr_inzai_no5_0800m.html">No.5立坑　631R</a></li>
+      <li><a href="./vr_inzai_no5_0900m.html">No.5立坑　705R</a></li>
+      <li><a href="./vr_inzai_no5_1000m.html">No.5立坑　779R</a></li>
+      <li><a href="./vr_inzai_no5_1100m.html">No.5立坑　853R</a></li>
+      <li><a href="./vr_inzai_no5_1200m.html">No.5立坑　950R</a></li>
 
     </ul>
   </body>
